+ Added separators to submenu items, slightly reordered a few entries, and fixed a logic issue in the menu cleanup code. (Admin.php, Subs-Menu.php, GenericMenu.template.php) ! Information box was too small. (ManagePaid.php) * Added rounded corners to the admin homepage fieldsets, but it doesn't work well in Opera... Ah well, if it's an Opera bug, I'm not gonna prevent other browsers from showing these. (Admin.template.php) * Refined Pretty URLs admin area. Made it clearer what the cache option is for (until now, it wasn't even obvious that disabling it would still keep PURLs enabled.) (Admin.template.php, Admin.language.php, admin.css) * French translation fixes in the admin area. It had a tendency to use words like 'Réglages' a bit too much where 'Paramètres' made more sense. Also, the 'Forum' menu area is called 'layout' internally, so the French translation had 'Apparence'. Since Pete moved the Theme options to another menu area, it was time to reflect the change in the French version as well... (Admin.french.php)

--- a/Themes/default/skins/admin.css
+++ b/Themes/default/skins/admin.css
@@ -483,4 +483,4 @@ ul.moderation_notes
 .pretty_filter
 	color: #888
 	font-size: 0.9em
-	padding: 0.5em 0 0.5em 4.2em
+	padding: 0.5em 0 1em 3em
